# SciArgGraph

./: .gitignore  LICENSE  README.md  pyproject.toml
argviz/: __init__.py  model.py  parser.py  styles.py  types.py
argviz/exporters/: __init__.py  cytoscape.py  dot.py  outline.py  svg.py
argviz/graph_utils/: __init__.py  analysis.py  filters.py  queries.py  serialize.py  textual.py  traversal.py
argviz/schema/: argument_graph_schema.json
argviz/themes/: default.yaml
docs/: ontology_spec.md
examples/: argument_graph.dot  argument_graph.yaml  source.txt  visualization.html
schema/: argument_graph_schema.json  argument_graph_schema.yaml
tests/: test_basic.py
